--- a/IndoorGMLEditor/pom.xml
+++ b/IndoorGMLEditor/pom.xml
@@ -72,6 +72,18 @@
 			<artifactId>gt-main</artifactId>
 			<version>14.1</version>
 		</dependency>
+		
+		<!-- httpComponent -->
+		<dependency>
+    		<groupId>org.apache.httpcomponents</groupId>
+    		<artifactId>httpmime</artifactId>
+    		<version>4.3.5</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.apache.httpcomponents</groupId>
+    		<artifactId>httpclient</artifactId>
+    		<version>4.3.5</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
