--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,15 @@
 		<dependency>
 			<groupId>org.jvnet.ogc</groupId>
 			<artifactId>indoorgml-v_1_0</artifactId>
-			<version>2.5.1</version>
+			<version>2.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jvnet.ogc</groupId>
+			<artifactId>citygml-v_2_0</artifactId>
+			<version>2.6.1</version>
 		</dependency>
 
-		<!-- JAXB -->
+		<!-- JAXB 
 		<dependency>
 			<groupId>org.jvnet.jaxb2_commons</groupId>
 			<artifactId>jaxb2-basics</artifactId>
@@ -42,7 +47,7 @@
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-core</artifactId>
 			<version>2.2.11</version>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>junit</groupId>
