--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,18 @@
 			<artifactId>indoorgml-v_1_0</artifactId>
 			<version>2.6.1</version>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>org.jvnet.ogc</groupId>
 			<artifactId>citygml-v_2_0</artifactId>
 			<version>2.6.1</version>
+		</dependency> -->
+		<dependency>
+			<groupId>edu.pnu</groupId>
+			<artifactId>kairos-citygml-xsd-v_2_0</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/citygml-xsd-v_2_0-1.0.0.jar</systemPath>
 		</dependency>
 
 		<!-- JAXB 
@@ -111,6 +119,14 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.3</version>
+				<configuration>
+					<mainClass>edu.pnu.gui.MainFrame</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
