--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>1.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
 					<mainClass>edu.pnu.gui.MainFrame</mainClass>
 				</configuration>
