--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,16 @@
 					</execution>
 				</executions>
 			</plugin>
-
+			
+			 <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-surefire-plugin</artifactId>
+		        <version>2.19</version>
+		        <configuration>
+		            <argLine>-Xmx1024m</argLine>
+		        </configuration>
+		      </plugin>
+			
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
